# LeJacques_Workspace

./: README.md  area.txt  area.txt~
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/agitr/: count  hello  once  reverse_cmd_vel  throttle
devel/lib/auv_sub_pi/: Leviathan_PI_Controller  controller_calib_node
devel/lib/auv_sub_pid/: Leviathan_PID_Controller  controller_calib_node
devel/lib/movement_package/: Leviathan_PI_Controller_node  ai_control_node  calibration_control_node  manual_control_node  movement_package_node
devel/lib/opencv1/: OCDAL  calc  calculate_area  open_test  stephenWantsIt
devel/lib/pkgconfig/: agitr.pc  auv_sub_pi.pc  auv_sub_pid.pc  movement_package.pc  opencv1.pc  (+7 more)
src/agitr/: CMakeLists.txt  CMakeLists.txt~  Untitled Document~  count.cpp  doublesim.launch  doublesim.launch~  example.launch  hello.cpp  once.cpp  reverse.launch  reverse.launch~  reverse_cmd_vel.cpp  throttle.cpp
src/auv_sub_pi/: CMakeLists.txt  controller_calib.cpp  movements_main_2017.cpp  package.xml  pi.cpp  pi.h  pi_example  pi_example.cpp
src/opencv1/: CMakeLists.txt  CMakeLists.txt~  OCDAL.cpp  calc.cpp  calculate_area.cpp  hand_turtle.launch  open_test.cpp  package.xml~  stephenWantsIt.cpp  test.cpp
src/pub_tuto/: CMakeLists.txt  multiplePub.cpp  package.xml  pubvel.cpp
src/roomba_iarc/: CMakeLists.txt  CMakeLists.txt~  blob_detect.cpp
src/rviz_practice/: CMakeLists.txt
src/smach_test/: CMakeLists.txt  package.xml  state_machine1.py
src/sub_tuto/: CMakeLists.txt  CMakeLists.txt~  subpose.cpp
src/uno_tortuga/: CMakeLists.txt  package.xml  uno_pub.cpp
(+17 files in other folders)
