cmake_minimum_required(VERSION 2.8.3)
project(opencv1)

find_package(catkin REQUIRED COMPONENTS roscpp geometry_msgs turtlesim std_msgs)
find_package(OpenCV REQUIRED)
catkin_package(DEPENDS system_lib)
include_directories(include ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
add_executable(open_test open_test.cpp)
add_executable(calc calc.cpp)
add_executable(OCDAL OCDAL.cpp)
add_executable(calculate_area calculate_area.cpp)
#add_executable(please please.cpp)
#add_executable(open_test test.cpp)
target_link_libraries(open_test ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
target_link_libraries(calc ${catkin_LIBRARIES}) 
target_link_libraries(OCDAL ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
target_link_libraries(calculate_area ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
#target_link_libraries(please ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}) 

